fix borders overlapping and making them thciker

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ body{
     font-size: 100px;
     width: 100px;
     height: 100px;
-    border: 1px solid black;
+    border-left: 5px solid black;
+    border-bottom: 5px solid black;;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,4 +38,6 @@ body{
     width: 300px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    border-top: 5px solid black;
+    border-right: 5px solid black;
 }
